--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Pillow
 scipy
 tensorboard
 tqdm
+array2gif
 -e git+https://github.com/openai/baselines.git#egg=baselines
 comet-ml
 sortedcontainers
