--- a/pposweep.yaml
+++ b/pposweep.yaml
@@ -27,4 +27,7 @@ parameters:
     distribution: q_uniform
     min: 100
     max: 400
+  ^env_name:
+    distribution: categorical
+    values: ["GrowSpaceEnv-Control-v0", "GrowSpaceSpotlight-MnistMix-v0"]
 program: main.py
