--- a/sweep_continuous.yaml
+++ b/sweep_continuous.yaml
@@ -2,7 +2,7 @@ program: main.py
 method: random
 metric:
   goal: maximize
-  name: Episode Reward
+  name: Episode_Reward
 parameters:
   ^FIRST_BRANCH_HEIGHT:
     distribution: uniform
