new values and optimizers

--- a/pposweep.yaml
+++ b/pposweep.yaml
@@ -1,12 +1,12 @@
 method: random
 metric:
   goal: maximize
-  name: Episode Reward
+  name: Episode_Reward
 
 parameters:
   ^lr:
     distribution: uniform
-    min: 1.0e-12
+    min: 1.0e-5
     max: 0.1
   ^eps:
     distribution: uniform
@@ -28,16 +28,16 @@ parameters:
       - False
   ^gae_lambda:
     distribution: uniform
-    min: 0.1
+    min: 0.3
     max: 0.99
   ^entropy_coef:
     distribution: uniform
-    min: 0.001
+    min: 0.01
     max: 0.5
   ^value_loss_coef:
     distribution: uniform
-    min: 0.01
-    max: 0.9
+    min: 0.25
+    max: 0.75
   ^max_grad_norm:
     distribution: uniform
     min: 0.1
@@ -56,7 +56,18 @@ parameters:
     max: 100
   ^clip_param:
     distribution: uniform
-    min: 0.01
-    max: 0.9
+    min: 0.05
+    max: 0.5
+  ^seed:
+    distribution: categorical
+    values: [111,222,333]
+  ^optimizer:
+    distribution: categorical
+    values: ["adam", "sgd"]
+  ^momentum:
+    distribution: uniform
+    min: 0.95
+    max: 0.99
+
 
 program: main.py
