--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--e git+https://git@github.com/openai/gym/@4d24886f20a04a6c57c580d57c4402e59941b7bb#egg=gym
+stable-baselines3
 -e git+ssh://git@github.com/YasmeenVH/growspace.git#egg=growspace
 -e git+https://git@github.com/ministry-of-silly-code/experiment_buddy.git#egg=experiment_buddy
 matplotlib
@@ -11,9 +11,10 @@ scipy
 tensorboard
 tqdm
 array2gif
-comet-ml
 sortedcontainers
 sklearn
 numba
 python-dateutil
-
+PyYAML
+protobuf==3.12.0
+cffi==1.1
